--- a/react_client/sports-amigos/src/styles/App.css
+++ b/react_client/sports-amigos/src/styles/App.css
@@ -1,1 +1,7 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
+
+  
+
+
